--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -9,16 +9,16 @@
     />
   </mat-form-field>
 
-  <div class="table-pagination-container mat-elevation-z8">
+  <div class="table-pagination-container mat-elevation-z8" *ngIf="!showLoading; else elseLoadingBlock">
     <div class="example-container">
       <mat-table [dataSource]="dataSource" matSort>
         <!-- Family Id -->
-        <ng-container matColumnDef="familyId">
+        <ng-container matColumnDef="familyAcronym">
           <mat-header-cell *matHeaderCellDef mat-sort-header>
-            Id Família
+            Família
           </mat-header-cell>
           <mat-cell *matCellDef="let element">
-            {{ element.familyId }}
+            {{ element.familyAcronym }}
           </mat-cell>
         </ng-container>
 
@@ -31,12 +31,12 @@
         </ng-container>
 
         <!-- Responsible Column -->
-        <ng-container matColumnDef="responsible">
+        <ng-container matColumnDef="legalResponsible">
           <mat-header-cell *matHeaderCellDef mat-sort-header>
             Responsável
           </mat-header-cell>
           <mat-cell *matCellDef="let element">
-            {{ element.responsible }}
+            {{ element.legalResponsible }}
           </mat-cell>
         </ng-container>
 
@@ -59,4 +59,10 @@
       aria-label="Select page of users"
     ></mat-paginator>
   </div>
+
+  <ng-template #elseLoadingBlock>
+    <div class="spinner-container">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
 </div>
