--- a/frontend/src/app/pages/child-detail/child-detail.component.html
+++ b/frontend/src/app/pages/child-detail/child-detail.component.html
@@ -199,5 +199,6 @@
   </div>
   <button mat-raised-button color="primary" type="button" (click)="onClickSaveChildGodParents()">
     <mat-icon class="icon">autorenew</mat-icon>
+    <span>Salvar informações</span>
   </button>
 </div>
