--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
   <mat-form-field appearance="standard">
     <mat-label>Filtro</mat-label>
     <input
+      id="filter-input"
       matInput
       (keyup)="applyFilter($event)"
       placeholder="Ex. João"
