--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -15,6 +15,7 @@
             >
               <mat-label>E-mail</mat-label>
               <input
+                id="login"
                 type="email"
                 matInput
                 formControlName="user"
@@ -31,6 +32,7 @@
             <mat-form-field class="input-full-width" appearance="outline">
               <mat-label>Senha</mat-label>
               <input
+                id="password"
                 matInput
                 formControlName="password"
                 [type]="hidePassword ? 'password' : 'text'"
