--- a/frontend/src/app/pages/child-detail/child-detail.component.scss
+++ b/frontend/src/app/pages/child-detail/child-detail.component.scss
@@ -1,3 +1,8 @@
+.child-form-container {
+  margin-bottom: 24px;
+  box-sizing: border-box;
+}
+
 .column {
   font-weight: bold;
 }
@@ -35,4 +40,10 @@ table {
   grid-template-columns: repeat(2, 140px);
   gap: 8px;
   padding-bottom: 16px;
+}
+
+.fab-button-container {
+  padding-top: 16px;
+  display: flex;
+  justify-content: flex-end;
 }
