--- a/frontend/src/app/pages/dashboard/dashboard.component.scss
+++ b/frontend/src/app/pages/dashboard/dashboard.component.scss
@@ -26,3 +26,17 @@ th {
 .mat-row:hover .mat-cell {
   border-color: currentColor;
 }
+
+.table-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .filter-container {
+    width: 50%;
+  }
+
+  .export-button {
+    height: 36px;
+  }
+}
