feat: implementing login, dashboard and manage accounts E2E scenarios

--- a/frontend/src/app/pages/manage-accounts/manage-accounts.component.html
+++ b/frontend/src/app/pages/manage-accounts/manage-accounts.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <button
-      class="export-button"
+      class="new-user-button"
       mat-raised-button
       color="primary"
       type="button"
