--- a/frontend/src/app/pages/child-detail/child-detail.component.html
+++ b/frontend/src/app/pages/child-detail/child-detail.component.html
@@ -1,18 +1,18 @@
 <div *ngIf="child" class="child-form-container">
   <div>
-    <form class="example-form" [formGroup]="childFormGroup">
+    <form class="child-detail-form" [formGroup]="childFormGroup">
       <h2>Criança</h2>
       <div formGroupName="child">
-        <table class="example-full-width" cellspacing="0">
+        <table class="full-width" cellspacing="0">
           <tr>
             <td>
-              <mat-form-field class="example-full-width" appearance="fill">
+              <mat-form-field class="full-width" appearance="fill">
                 <mat-label>Nome</mat-label>
                 <input matInput formControlName="name" />
               </mat-form-field>
             </td>
             <td>
-              <mat-form-field class="example-full-width" appearance="fill">
+              <mat-form-field class="full-width" appearance="fill">
                 <mat-label>Idade</mat-label>
                 <input matInput formControlName="age" />
               </mat-form-field>
@@ -21,13 +21,13 @@
 
           <tr>
             <td>
-              <mat-form-field class="example-full-width" appearance="fill">
+              <mat-form-field class="full-width" appearance="fill">
                 <mat-label>Tamanho roupa</mat-label>
                 <input matInput formControlName="clotheSize" />
               </mat-form-field>
             </td>
             <td>
-              <mat-form-field class="example-full-width" appearance="fill">
+              <mat-form-field class="full-width" appearance="fill">
                 <mat-label>Tamanho calçado</mat-label>
                 <input matInput formControlName="shoeSize" />
               </mat-form-field>
@@ -38,16 +38,16 @@
 
       <h2>Família</h2>
       <div formGroupName="family">
-        <table class="example-full-width" cellspacing="0">
+        <table class="full-width" cellspacing="0">
           <tr>
             <td>
-              <mat-form-field class="example-full-width" appearance="fill">
+              <mat-form-field class="full-width" appearance="fill">
                 <mat-label>Identificação</mat-label>
                 <input matInput formControlName="code" />
               </mat-form-field>
             </td>
             <td>
-              <mat-form-field class="example-full-width" appearance="fill">
+              <mat-form-field class="full-width" appearance="fill">
                 <mat-label>Nro. Contato</mat-label>
                 <input matInput formControlName="contactNumber" />
               </mat-form-field>
@@ -56,12 +56,12 @@
         </table>
 
         <p>
-          <mat-form-field class="example-full-width" appearance="fill">
+          <mat-form-field class="full-width" appearance="fill">
             <mat-label>Responsável</mat-label>
             <input matInput formControlName="member" />
           </mat-form-field>
 
-          <mat-form-field class="example-full-width" appearance="fill">
+          <mat-form-field class="full-width" appearance="fill">
             <mat-label>Endereço</mat-label>
             <textarea matInput formControlName="address"></textarea>
           </mat-form-field>
@@ -77,7 +77,7 @@
     >
       <h2>Apadrinhar</h2>
       <div>
-        <mat-form-field class="example-full-width" appearance="outline">
+        <mat-form-field class="full-width" appearance="outline">
           <mat-label>Tipo presente</mat-label>
           <mat-select formControlName="giftType" name="Tipo presente">
             <mat-option>&nbsp;</mat-option>
@@ -94,17 +94,17 @@
           >
         </mat-form-field>
 
-        <mat-form-field class="example-full-width" appearance="outline">
+        <mat-form-field class="full-width" appearance="outline">
           <mat-label>Nome</mat-label>
           <input matInput formControlName="name" id="godParentName" />
         </mat-form-field>
 
-        <mat-form-field class="example-full-width" appearance="outline">
+        <mat-form-field class="full-width" appearance="outline">
           <mat-label>Endereço</mat-label>
           <input matInput formControlName="address" id="godParentAddress" />
         </mat-form-field>
 
-        <mat-form-field class="example-full-width" appearance="outline">
+        <mat-form-field class="full-width" appearance="outline">
           <mat-label>Telefone</mat-label>
           <input
             matInput
@@ -137,81 +137,79 @@
     </form>
   </div>
 
-  <div class="table-pagination-container mat-elevation-z8">
-    <div class="example-container">
-      <mat-table [dataSource]="gifts">
-        <!-- Is Delivered -->
-        <ng-container matColumnDef="isDelivered">
-          <mat-header-cell *matHeaderCellDef>Entregue?</mat-header-cell>
-          <mat-cell *matCellDef="let element">
-            <mat-checkbox
-              disabled="true"
-              [checked]="element.gift.isDelivered"
-            ></mat-checkbox>
-          </mat-cell>
-        </ng-container>
+  <div class="god-parents-table_container mat-elevation-z8">
+    <mat-table [dataSource]="gifts">
+      <!-- Is Delivered -->
+      <ng-container matColumnDef="isDelivered">
+        <mat-header-cell *matHeaderCellDef>Entregue?</mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <mat-checkbox
+            disabled="true"
+            [checked]="element.gift.isDelivered"
+          ></mat-checkbox>
+        </mat-cell>
+      </ng-container>
 
-        <!-- Gift Type -->
-        <ng-container matColumnDef="giftType">
-          <mat-header-cell *matHeaderCellDef>Tipo</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{
-            element.gift.giftType.description
-          }}</mat-cell>
-        </ng-container>
+      <!-- Gift Type -->
+      <ng-container matColumnDef="giftType">
+        <mat-header-cell *matHeaderCellDef>Tipo</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{
+          element.gift.giftType.description
+        }}</mat-cell>
+      </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <mat-header-cell *matHeaderCellDef>Quem apadrinhou</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{
-            element.gift.godParent.name
-          }}</mat-cell>
-        </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef>Quem apadrinhou</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{
+          element.gift.godParent.name
+        }}</mat-cell>
+      </ng-container>
 
-        <!-- Contact Number Column -->
-        <ng-container matColumnDef="contactNumber">
-          <mat-header-cell *matHeaderCellDef>Nro. Contato</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{
-            element.gift.godParent.contactNumber
-          }}</mat-cell>
-        </ng-container>
+      <!-- Contact Number Column -->
+      <ng-container matColumnDef="contactNumber">
+        <mat-header-cell *matHeaderCellDef>Nro. Contato</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{
+          element.gift.godParent.contactNumber
+        }}</mat-cell>
+      </ng-container>
 
-        <!-- Address Column -->
-        <ng-container matColumnDef="address">
-          <mat-header-cell *matHeaderCellDef>Endereço</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{
-            element.gift.godParent.address
-          }}</mat-cell>
-        </ng-container>
+      <!-- Address Column -->
+      <ng-container matColumnDef="address">
+        <mat-header-cell *matHeaderCellDef>Endereço</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{
+          element.gift.godParent.address
+        }}</mat-cell>
+      </ng-container>
 
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
-          <mat-header-cell *matHeaderCellDef>&nbsp;</mat-header-cell>
-          <mat-cell *matCellDef="let element">
-            <button
-              mat-icon-button
-              aria-label="Excluir"
-              (click)="deleteGift($event, element)"
-            >
-              <mat-icon>delete</mat-icon>
-            </button>
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <mat-header-cell *matHeaderCellDef>Ações</mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            aria-label="Excluir"
+            (click)="deleteGift($event, element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
 
-            <button
-              mat-icon-button
-              [disabled]="element.gift.isDelivered"
-              aria-label="Presente entregue"
-              (click)="markGiftAsDelivered($event, element)"
-            >
-              <mat-icon>celebration</mat-icon>
-            </button>
-          </mat-cell>
-        </ng-container>
+          <button
+            mat-icon-button
+            [disabled]="element.gift.isDelivered"
+            aria-label="Presente entregue"
+            (click)="markGiftAsDelivered($event, element)"
+          >
+            <mat-icon>celebration</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
 
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row
-          *matRowDef="let row; columns: displayedColumns"
-          (click)="onRowClicked(row)"
-        ></mat-row>
-      </mat-table>
-    </div>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        (click)="onRowClicked(row)"
+      ></mat-row>
+    </mat-table>
   </div>
 </div>
