feature: fixing observable destroying and manage users page

--- a/frontend/src/app/pages/manage-accounts/edit/edit-account.component.html
+++ b/frontend/src/app/pages/manage-accounts/edit/edit-account.component.html
@@ -55,6 +55,17 @@
   </div>
 
   <div class="form-actions">
-    <button mat-raised-button color="warn" type="button" (click)="disableUser()">Inativar</button>
+    <button mat-raised-button color="default" type="button" (click)="cancel()">
+      Cancelar
+    </button>
+
+    <button
+      mat-raised-button
+      color="warn"
+      type="button"
+      (click)="disableUser()"
+    >
+      Inativar
+    </button>
   </div>
 </form>
