--- a/frontend/src/app/pages/manage-accounts/create/create-account.component.html
+++ b/frontend/src/app/pages/manage-accounts/create/create-account.component.html
@@ -46,6 +46,10 @@
   </div>
 
   <div class="form-actions">
+    <button mat-raised-button color="default" type="button" (click)="cancel()">
+      Cancelar
+    </button>
+
     <button
       mat-raised-button
       color="primary"
