feature: creating family with members

--- a/frontend/src/app/pages/families/list-families/list-families.component.html
+++ b/frontend/src/app/pages/families/list-families/list-families.component.html
@@ -12,6 +12,17 @@
         />
       </mat-form-field>
     </div>
+
+    <button
+      class="create-button"
+      mat-raised-button
+      color="primary"
+      type="button"
+      (click)="create()"
+    >
+      <mat-icon>perm_identity</mat-icon>
+      Nova família
+    </button>
   </div>
 
   <div class="table-pagination-container mat-elevation-z8">
