feature: done family CRUD

--- a/frontend/src/app/pages/child-detail/child-detail.component.html
+++ b/frontend/src/app/pages/child-detail/child-detail.component.html
@@ -1,11 +1,11 @@
 <div class="back-button-container">
   <button
     mat-raised-button
-    color="default"
+    color="accent"
     type="button"
     (click)="backToDashboard()"
   >
-    Voltar
+    <mat-icon>arrow_back</mat-icon>
   </button>
 </div>
 <div *ngIf="child" class="child-form-container">
