--- a/frontend/src/app/pages/families/create/create-family.component.scss
+++ b/frontend/src/app/pages/families/create/create-family.component.scss
@@ -5,6 +5,12 @@
 .form-container {
   margin-bottom: 24px;
   box-sizing: border-box;
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+  }
 }
 
 .full-width {
